--- a/src/main/resources/templates/post/searchList.html
+++ b/src/main/resources/templates/post/searchList.html
@@ -8,77 +8,81 @@
 </head>
 
 <div layout:fragment="content">
-    <section class="py-5">
-        <h1>검색 결과</h1>
-        <div class="container px-4 px-lg-5 mt-5">
-            <div th:if="${postList.isEmpty()}"><p>검색 결과가 없습니다.</p></div>
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <div class="col mb-5" th:unless="${postList.isEmpty()}"  th:each = "post:${postList}">
-                    <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
-                    <!-- 제품사진-->
-                        <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
-                        <!-- Product details-->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- 제목-->
-                                <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
-                                <!--지역, 시간-->
-                                <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
-                                <!-- 가격-->
-                                <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+<section class="py-5">
+    <div class="container px-4 my-5">
+        <section class="py-5">
+            <h1 class="text-center">'[[${searchedWord}]]' 검색 결과</h1>
+            <div class="container px-4 px-lg-5 mt-5">
+                <div class="fs-6 fw-normal text-secondary text-center" th:if="${postList.isEmpty()}"><p>검색 결과가 없습니다.</p></div>
+                <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                    <div class="col mb-5" th:unless="${postList.isEmpty()}"  th:each = "post:${postList}">
+                        <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
+                        <!-- 제품사진-->
+                            <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
+                            <!-- Product details-->
+                            <div class="card-body p-4">
+                                <div class="text-center">
+                                    <!-- 제목-->
+                                    <h5 class="fw-bolder" th:text="${post.title}">제목</h5>
+                                    <!--지역, 시간-->
+                                    <p class="fw">[[${post.loc.locName}]] / [[${post.createdTime}]]</p>
+                                    <!-- 가격-->
+                                    <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- 페이징 -->
-        <div th:if="${!postList.isEmpty()}">
-            <!-- 전역 변수 선언 -->
-            <nav th:with="pageNumber = ${postList.pageable.pageNumber}, pageSize = ${postList.pageable.pageSize},totalPages = ${postList.totalPages},startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},tempEndPage = ${startPage + pageSize - 1},endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
-                 aria-label="Page navigation"
-            >
-                <ul class="pagination">
-                    <!-- 처음으로 이동 -->
-                    <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
-                        <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=0)}">
-                            <span>&laquo;</span>
-                            <span class="sr-only">First</span>
-                        </a>
-                    </li>
+            <!-- 페이징 -->
+            <div th:if="${!postList.isEmpty()}">
+                <!-- 전역 변수 선언 -->
+                <nav th:with="pageNumber = ${postList.pageable.pageNumber}, pageSize = ${postList.pageable.pageSize},totalPages = ${postList.totalPages},startPage = ${T(java.lang.Math).floor(pageNumber / pageSize) * pageSize + 1},tempEndPage = ${startPage + pageSize - 1},endPage = (${tempEndPage < totalPages ? tempEndPage : totalPages})"
+                     aria-label="Page navigation"
+                >
+                    <ul class="pagination">
+                        <!-- 처음으로 이동 -->
+                        <li th:classappend="${pageNumber < pageSize} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=0)}">
+                                <span>&laquo;</span>
+                                <span class="sr-only">First</span>
+                            </a>
+                        </li>
 
-                    <!-- 이전으로 이동 -->
-                    <li th:classappend="${postList.first} ? 'disabled'" class="page-item">
-                        <a class="page-link" th:href="${postList.first} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber - 1})}" aria-label="Previous">
-                            <span aria-hidden="true">&lt;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
+                        <!-- 이전으로 이동 -->
+                        <li th:classappend="${postList.first} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="${postList.first} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber - 1})}" aria-label="Previous">
+                                <span aria-hidden="true">&lt;</span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                        </li>
 
-                    <!-- 특정 페이지로 이동 -->
-                    <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
-                        <a th:text="${page}" class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${page - 1})}"></a>
-                    </li>
+                        <!-- 특정 페이지로 이동 -->
+                        <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
+                            <a th:text="${page}" class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${page - 1})}"></a>
+                        </li>
 
-                    <!-- 다음으로 이동 -->
-                    <li th:classappend="${postList.last} ? 'disabled'" class="page-item">
-                        <a class="page-link" th:href="${postList.last} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber + 1})}" aria-label="Next">
-                            <span aria-hidden="true">&gt;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
+                        <!-- 다음으로 이동 -->
+                        <li th:classappend="${postList.last} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="${postList.last} ? '#' : @{/post/search(word=${searchedWord}, page=${pageNumber + 1})}" aria-label="Next">
+                                <span aria-hidden="true">&gt;</span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </li>
 
-                    <!-- 마지막으로 이동 -->
-                    <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
-                        <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${totalPages - 1})}">
-                            <span>&raquo;</span>
-                            <span class="sr-only">Last</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div> <!-- /페이징 -->
-    </section>
+                        <!-- 마지막으로 이동 -->
+                        <li th:classappend=" ${T(java.lang.Math).floor(totalPages / pageSize) * pageSize - 1 <= startPage} ? 'disabled'" class="page-item">
+                            <a class="page-link" th:href="@{/post/search(word=${searchedWord}, page=${totalPages - 1})}">
+                                <span>&raquo;</span>
+                                <span class="sr-only">Last</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div> <!-- /페이징 -->
+        </section>
+    </div>
+</section>
 </div>
 
 
