--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -5519,6 +5519,8 @@ textarea.form-control-lg {
   width: auto;
   margin: 0.5rem;
   pointer-events: none;
+  top:20%;
+  width: 300px;
 }
 .modal.fade .modal-dialog {
   transition: transform 0.3s ease-out;
@@ -5606,6 +5608,8 @@ textarea.form-control-lg {
   position: relative;
   flex: 1 1 auto;
   padding: 1rem;
+  text-align: center;
+
 }
 
 .modal-footer {
@@ -11364,4 +11368,13 @@ textarea.form-control-lg {
 
 .form-group {
   margin-bottom: 1rem;
+}
+
+.a-deco-none {
+  text-decoration: none;
+  color: black;
+}
+
+.cursor {
+  cursor: pointer;
 }
