--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -5,7 +5,7 @@
 <head layout:fragment="head">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <!--    <link href="/css/chat.css" rel="stylesheet" />-->
-    <title>채팅 테스트</title>
+    <title>채팅</title>
 </head>
 <div class="container bootstrap snippets bootdey" layout:fragment="content">
     <div class="row">
