--- a/src/main/resources/templates/chat/chatRoomListByPost.html
+++ b/src/main/resources/templates/chat/chatRoomListByPost.html
@@ -3,7 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/basic.html}">
 <head layout:fragment="head">
-    <title>채팅 테스트</title>
+    <title>채팅목록</title>
 </head>
 
 <div class="container bootstrap snippets bootdey" layout:fragment="content">
@@ -14,7 +14,7 @@
             <div class=" row border-bottom padding-sm" style="height: 40px;">
                 <h2>채팅목록</h2>
             </div>
-            <p class="mt-3 fs-5 fw-normal text-secondary"th:if="${chatRoomList.isEmpty()}">이 상품에 대해 대화중인 채팅방이 없습니다.</p>
+            <p class="mt-3 fs-6 fw-normal text-secondary"th:if="${chatRoomList.isEmpty()}">이 상품에 대해 대화중인 채팅방이 없습니다.</p>
             <!-- member list -->
             <ul class="friend-list">
                 <th:block th:each="chatRoom : ${chatRoomList}">
