--- a/src/main/resources/templates/post/categoryList.html
+++ b/src/main/resources/templates/post/categoryList.html
@@ -11,9 +11,12 @@
 <section class="py-5">
     <div class="container px-4 my-5">
         <section class="py-5">
-            <div>
+            <div th:if="${category == null}">
                 <h1 class="text-center" th:if="${session.loginMember == null}">중고거래 상품</h1>
                 <h1 class="text-center" th:if="${session.loginMember != null}">[[${session.loginMember.loc.locName}]] 중고거래 상품</h1>
+            </div>
+            <div th:if="${category != null}">
+                <h1 class="text-center">[[${category.category}]]</h1>
             </div>
             <br/><br/>
             <button class="btn-orange float-md-end" th:if="${session.loginMember != null}" th:onclick="|location.href='@{/post/uploadPage}'|">상품 올리기</button>
@@ -60,7 +63,7 @@
                         <ul class="pagination">
                             <!-- 처음으로 이동 -->
                             <li th:classappend="${pageNumber +1 == 1} ? 'disabled'" class="page-item">
-                                <a class="page-link" th:href="@{/post/board(page=0)}">
+                                <a class="page-link" th:href="@{/post/board/${category}(page=0)}">
                                     <span>&laquo; </span>
     <!--                                <span class="sr-only">First</span>-->
                                 </a>
@@ -68,7 +71,7 @@
 
                             <!-- 이전으로 이동 -->
                             <li th:classappend="${list.first} ? 'disabled'" class="page-item">
-                                <a class="page-link" th:href="${list.first} ? '#' : @{/post/board(page=${pageNumber - 1})}" aria-label="Previous">
+                                <a class="page-link" th:href="${list.first} ? '#' : @{/post/board/${category}(page=${pageNumber - 1})}" aria-label="Previous">
                                     <span aria-hidden="true">&lt;</span>
     <!--                                <span class="sr-only">Previous</span>-->
                                 </a>
@@ -76,12 +79,12 @@
 
                             <!-- 특정 페이지로 이동 -->
                             <li th:each="page: ${#numbers.sequence(startPage, endPage)}" th:classappend="${page == pageNumber + 1} ? 'active'" class="page-item">
-                                <a th:text="${page}" class="page-link" th:href="@{/post/board(page=${page - 1})}"></a>
+                                <a th:text="${page}" class="page-link" th:href="@{/post/board/${category}(page=${page - 1})}"></a>
                             </li>
 
                             <!-- 다음으로 이동 -->
                             <li th:classappend="${list.last} ? 'disabled'" class="page-item">
-                                <a class="page-link" th:href="${list.last} ? '#' : @{/post/board(page=${pageNumber + 1})}" aria-label="Next">
+                                <a class="page-link" th:href="${list.last} ? '#' : @{/post/board/${category}(page=${pageNumber + 1})}" aria-label="Next">
                                     <span aria-hidden="true">&gt;</span>
     <!--                                <span class="sr-only">Next</span>-->
                                 </a>
@@ -89,7 +92,7 @@
 
                             <!-- 마지막으로 이동 -->
                             <li th:classappend=" ${pageNumber +1 == totalPages} ? 'disabled'" class="page-item">
-                                <a class="page-link" th:href="@{/post/board(page=${totalPages - 1})}">
+                                <a class="page-link" th:href="@{/post/board/${category}(page=${totalPages - 1})}">
                                     <span>&raquo; </span>
     <!--                                <span class="sr-only">Last</span>-->
                                 </a>
