--- a/src/main/resources/templates/post/update_post.html
+++ b/src/main/resources/templates/post/update_post.html
@@ -64,23 +64,24 @@
 
 
         <!--거래희망장소-->
-        <button id="regPlace" type="button">거래희망장소 선택하기</button>
+        <button id="regPlace" class="btn btn-outline-secondary" type="button">거래희망장소 선택하기</button>
         <!--카카오맵 지도-->
         <div id="mapArea">
-            <p style="font-weight: bold;">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
+            <br/>
+            <p class="fw-bold fs-6">거래 희망하는 장소를 지도에서 클릭해주세요!</p>
 
             <div id="map" style="width:100%;height:350px; margin: 20px;"></div>
 
             <div id="inputPlace" class="form-group form-car-mileage">
                 <input type="text" class="form-control" id="placeInfo" name="placeInfo" th:value="${mtPlace?.placeInfo}" placeholder="장소명을 입력해주세요. 예)강남역 1번 출구">
             </div>
-            <button id="cfmPlace" type="button" style="display: none;">장소선택하기</button>
+            <button id="cfmPlace" class="btn btn-outline-secondary" type="button" style="display: none;">장소선택하기</button>
 
-            <button id="noPlace" type="button" >장소선택 안함</button>
+            <button id="noPlace" class="btn btn-outline-secondary" type="button" >장소선택 안함</button>
         </div>
 
         <br/><br/>
-        <button type="button" id="uploadBtn" class="btn btn-primary btn-submit">상품 등록하기</button>
+        <button type="button" id="uploadBtn" class="btn-orange">상품 등록하기</button>
 
     </div>
 </div>
