--- a/src/main/resources/templates/memberHome.html
+++ b/src/main/resources/templates/memberHome.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="px-2 mt-3 content">
                     <div th:if="${postList.isEmpty()}">
-                        <p class="no-selling">게시중인 상품이 없습니다.</p>
+                        <p class="no-selling">게시중인 상품이 없습품니다.</p>
                     </div>
                     <div th:unless="${postList.isEmpty()}"
                          class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-3 justify-content-center">
