--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -5,16 +5,7 @@
 
 <head layout:fragment="head">
     <title>리뷰 보기</title>
-    <style>
-        .form-container {
-            max-width: 560px;
-            padding-left: 100px;
-        }
-        .field-error {
-            border-color: #dc3545;
-            color: #dc3545;
-        }
-    </style>
+    <link href="/css/reviewDetail.css" rel="stylesheet" />
 </head>
 
 <div layout:fragment="content">
