--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -64,24 +64,24 @@
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             <div class="col mb-6" th:unless="${soldList.isEmpty()}"  th:each = "soldPost:${soldList}">
                 <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${soldPost.postDto.postId}|}'|" style="cursor: pointer;">
-                <!-- 제품사진-->
-                <img class="card-img-top" th:src="|/post/firstImg/${soldPost.postDto.postId}|" alt="제품사진" />
-                <!-- Product details-->
-                <div class="card-body p-3">
-                    <div class="text-center">
-                        <!-- 제목-->
-                        <h5 class="fw-bolder text-truncate" th:text="${soldPost.postDto.title}">제목</h5>
-                        <!--지역, 시간-->
-                        <h6 class="fs-7 fw-normal text-secondary">[[${soldPost.postDto.loc.locName}]] ∙ [[${soldPost.postDto.createdTime}]]</h6>
-                        <!-- 가격-->
-                        <h6 class="fw-bolder" th:if="${soldPost.postDto.price}!=0" th:text="|${soldPost.postDto.price}원|">가격</h6>
-                        <h6 class="fw-bolder" th:if="${soldPost.postDto.price} == 0">가격없음</h6>
+                    <!-- 제품사진-->
+                    <img class="card-img-top" th:src="|/post/firstImg/${soldPost.postDto.postId}|" alt="제품사진" />
+                    <!-- Product details-->
+                    <div class="card-body p-3">
+                        <div class="text-center">
+                            <!-- 제목-->
+                            <h5 class="fw-bolder text-truncate" th:text="${soldPost.postDto.title}">제목</h5>
+                            <!--지역, 시간-->
+                            <h6 class="fs-7 fw-normal text-secondary">[[${soldPost.postDto.loc.locName}]] ∙ [[${soldPost.postDto.createdTime}]]</h6>
+                            <!-- 가격-->
+                            <h6 class="fw-bolder" th:if="${soldPost.postDto.price}!=0" th:text="|${soldPost.postDto.price}원|">가격</h6>
+                            <h6 class="fw-bolder" th:if="${soldPost.postDto.price} == 0">가격없음</h6>
 
+                        </div>
                     </div>
                 </div>
-                </div>
                 <div class="d-flex">
-                    <span class="span-inner" th:if="${soldPost.reviewBuyerId == null}"
+                    <span class="span-inner font-orange fw-bold" th:if="${soldPost.reviewBuyerId == null}"
                           th:onclick="|location.href='@{/post/buyers/{postId}(postId=${soldPost.postDto.postId})}'|">
                                     거래후기 보내기</span>
                     <span class="span-inner" th:if="${soldPost.reviewBuyerId != null}"
