--- a/src/main/resources/templates/chat/chat.html
+++ b/src/main/resources/templates/chat/chat.html
@@ -8,73 +8,77 @@
     <title>채팅</title>
 </head>
 <div class="container bootstrap snippets bootdey" layout:fragment="content">
-    <div class="row">
-        <!-- selected chat -->
-        <div class="col-md-15 bg-white ">
-            <th:block th:if="${chatSectionList == null}">
-                <div class="chat-message">
-                    <ul class="chatting chat"></ul>
-                </div>
-            </th:block>
-            <th:block th:if="${chatSectionList != null}">
-                <div class="chat-message" th:each="chatSection : ${chatSectionList.keySet()}">
-                    [[${chatSection}]]
-                    <ul class="chatting chat" th:each="chat : ${chatSectionList.get(chatSection)}">
-                        <li th:if="${session.loginMember.memId}==${chat.fromId}" class="right clearfix">
-                            <span class="chat-img pull-right">
-                                <img th:src="|/members/${chat.fromId}/profileImg|" alt="User Avatar">
-                            </span>
-                            <div class="chat-body clearfix">
-                                <div class="header">
-                                    <strong class="primary-font">[[${chat.fromId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
+<section class="py-5">
+    <div class="container px-4 my-5">
+        <div class="row">
+            <!-- selected chat -->
+            <div class="col-md-15 bg-white ">
+                <th:block th:if="${chatSectionList == null}">
+                    <div class="chat-message">
+                        <ul class="chatting chat"></ul>
+                    </div>
+                </th:block>
+                <th:block th:if="${chatSectionList != null}">
+                    <div class="chat-message" th:each="chatSection : ${chatSectionList.keySet()}">
+                        [[${chatSection}]]
+                        <ul class="chatting chat" th:each="chat : ${chatSectionList.get(chatSection)}">
+                            <li th:if="${session.loginMember.memId}==${chat.fromId}" class="right clearfix">
+                                <span class="chat-img pull-right">
+                                    <img th:src="|/members/${chat.fromId}/profileImg|" alt="User Avatar">
+                                </span>
+                                <div class="chat-body clearfix">
+                                    <div class="header">
+                                        <strong class="primary-font">[[${chat.fromId}]]</strong>
+                                        <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
 
+                                    </div>
+                                    <p th:if="${chat.imgState.imgStateCode=='0'}">
+                                        [[${chat.message}]]
+                                    </p>
+                                    <p th:if="${chat.imgState.imgStateCode=='1'}">
+                                        <img class="chatImg" th:each="chatImgId : ${chat.chatImgIdList}" th:src="|/chat/chatImg/${chatImgId}|" alt="Chat Image">
+                                    </p>
+                                    <hr>
+                                    <span class="read_state" th:text="${chat.readState.readStateName}"></span>
                                 </div>
-                                <p th:if="${chat.imgState.imgStateCode=='0'}">
-                                    [[${chat.message}]]
-                                </p>
-                                <p th:if="${chat.imgState.imgStateCode=='1'}">
-                                    <img class="chatImg" th:each="chatImgId : ${chat.chatImgIdList}" th:src="|/chat/chatImg/${chatImgId}|" alt="Chat Image">
-                                </p>
-                                <hr>
-                                <span class="read_state" th:text="${chat.readState.readStateName}"></span>
-                            </div>
-                        </li>
-                        <li th:unless="${session.loginMember.memId}==${chat.fromId}" class="left clearfix">
-                            <span class="chat-img pull-left">
-                                <img th:src="|/members/${chat.fromId}/profileImg|" alt="User Avatar">
-                            </span>
-                            <div class="chat-body clearfix">
-                                <div class="header">
+                            </li>
+                            <li th:unless="${session.loginMember.memId}==${chat.fromId}" class="left clearfix">
+                                <span class="chat-img pull-left">
+                                    <img th:src="|/members/${chat.fromId}/profileImg|" alt="User Avatar">
+                                </span>
+                                <div class="chat-body clearfix">
+                                    <div class="header">
 
-                                    <strong class="primary-font">[[${chat.fromId}]]</strong>
-                                    <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
+                                        <strong class="primary-font">[[${chat.fromId}]]</strong>
+                                        <small class="pull-right text-muted"><i class="fa fa-clock-o"></i>[[${chat.getCalculatedTimeForChat()}]]</small>
 
+                                    </div>
+                                    <p th:if="${chat.imgState.imgStateCode=='0'}">
+                                        [[${chat.message}]]
+                                    </p>
+                                    <p th:if="${chat.imgState.imgStateCode=='1'}">
+                                        <img class="chatImg" th:each="chatImgId : ${chat.chatImgIdList}" th:src="|/chat/chatImg/${chatImgId}|" alt="Chat Image">
+                                    </p>
                                 </div>
-                                <p th:if="${chat.imgState.imgStateCode=='0'}">
-                                    [[${chat.message}]]
-                                </p>
-                                <p th:if="${chat.imgState.imgStateCode=='1'}">
-                                    <img class="chatImg" th:each="chatImgId : ${chat.chatImgIdList}" th:src="|/chat/chatImg/${chatImgId}|" alt="Chat Image">
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </th:block>
+                <div class="chat-box bg-white">
+                    <div class="input-group">
+                        <input id="msg" class="form-control border no-shadow no-rounded"
+                               placeholder="Type your message here">
+                        <span class="input-group-btn">
+                            <button class="btn btn-success no-rounded" type="button" th:onclick="send()">Send</button>
+                            <input type="file" id="fileUpload" multiple>
+                            <button class="btn btn-success no-rounded" type="button" th:onclick="sendImg()">SendImg</button>
+                        </span>
+                    </div><!-- /input-group -->
                 </div>
-            </th:block>
-            <div class="chat-box bg-white">
-                <div class="input-group">
-                    <input id="msg" class="form-control border no-shadow no-rounded"
-                           placeholder="Type your message here">
-                    <span class="input-group-btn">
-            			<button class="btn btn-success no-rounded" type="button" th:onclick="send()">Send</button>
-                        <input type="file" id="fileUpload" multiple>
-            			<button class="btn btn-success no-rounded" type="button" th:onclick="sendImg()">SendImg</button>
-            		</span>
-                </div><!-- /input-group -->
             </div>
         </div>
     </div>
+</section>
 </div>
 <script layout:fragment="script" th:inline="javascript">
     console.log("script.....................");
