--- a/src/main/resources/templates/review/reviewDetail.html
+++ b/src/main/resources/templates/review/reviewDetail.html
@@ -19,89 +19,104 @@
 
             <div th:if="${reviewDetailForm.buyerIndicatorList != null}">
                 <div th:if="${reviewDetailForm.reviewState.stateCode == '0' && isReviewer}">
-                    <h4 th:text="|${reviewDetailForm.buyerId}님에게 아쉬운 후기를 남겼어요|"></h4>
-                    <h6 th:text="|${reviewDetailForm.buyerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
+                    <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.buyerId}님에게 아쉬운 후기를 남겼어요|"></p>
+                    <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.buyerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                     <hr class="my-4">
-                    <p>메시지는 운영 팀에게만 전달돼요</p>
-                    <p th:text="${reviewDetailForm.message}"> </p>
-                    <ul>
-                        <th:block th:each="buyerIndicator : ${reviewDetailForm.buyerIndicatorList}">
-                            <li th:text="${buyerIndicator.description}"></li>
-                        </th:block>
-                    </ul>
+                    <p class="fs-5 fw-bold">메시지는 운영 팀에게만 전달돼요</p>
+                    <div class="rv-box">
+                        <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                        <br/>
+                        <ul>
+                            <th:block th:each="buyerIndicator : ${reviewDetailForm.buyerIndicatorList}">
+                                <li class="fs-5 fw-normal" th:text="${buyerIndicator.description}"></li>
+                            </th:block>
+                        </ul>
+                    </div>
                 </div>
                 <div th:if="${reviewDetailForm.reviewState.stateCode != '0'}">
                     <div th:if="${isReviewer}">
-                        <h4 th:text="|${reviewDetailForm.buyerId}님에게 따뜻한 거래후기를 보냈어요|"></h4>
-                        <h6 th:text="|${reviewDetailForm.buyerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
-                        <p th:text="${reviewDetailForm.message}"> </p>
+                        <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.buyerId}님에게 따뜻한 거래후기를 보냈어요|"></p>
+                        <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.buyerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                         <hr class="my-4">
-                        <ul>
-                            <th:block th:each="buyerIndicator : ${reviewDetailForm.buyerIndicatorList}">
-                                <li th:text="${buyerIndicator.description}"></li>
-                            </th:block>
-                        </ul>
+                        <div class="rv-box">
+                            <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                            <br/>
+                            <ul>
+                                <th:block th:each="buyerIndicator : ${reviewDetailForm.buyerIndicatorList}">
+                                    <li class="fs-5 fw-normal" th:text="${buyerIndicator.description}"></li>
+                                </th:block>
+                            </ul>
+                        </div>
                     </div>
                     <div th:unless="${isReviewer}">
-                        <h4 th:text="|${reviewDetailForm.sellerId}님이 보낸 따뜻한 후기가 도착했어요|"></h4>
-                        <h6 th:text="|${reviewDetailForm.sellerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
-                        <p th:text="${reviewDetailForm.message}"> </p>
+                        <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.sellerId}님이 보낸 따뜻한 후기가 도착했어요|"></p>
+                        <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.sellerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                         <hr class="my-4">
-                        <ul>
-                            <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
-                                <li th:text="${sellerIndicator.description}"></li>
-                            </th:block>
-                        </ul>
+                        <div class="rv-box">
+                            <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                            <br/>
+                            <ul>
+                                <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
+                                    <li class="fs-5 fw-normal" th:text="${sellerIndicator.description}"></li>
+                                </th:block>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <button th:if="${isReviewer}"
-                        class="w-100 btn btn-secondary btn-lg"
+                        class="w-100 btn btn-secondary btn-lg mt-5"
                         id="buyerDelBtn"> 삭제하기 </button>
             </div>
 
             <div th:if="${reviewDetailForm.sellerIndicatorList != null}">
                 <div th:if="${reviewDetailForm.reviewState.stateCode == '0' && isReviewer}">
-                    <h4 th:text="|${reviewDetailForm.sellerId}님에게 아쉬운 후기를 남겼어요|"></h4>
-                    <h6 th:text="|${reviewDetailForm.sellerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
+                    <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.sellerId}님에게 아쉬운 후기를 남겼어요|"></p>
+                    <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.sellerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                     <hr class="my-4">
-                    <p>메시지는 운영 팀에게만 전달돼요</p>
-                    <p th:text="${reviewDetailForm.message}"> </p>
-                    <ul>
-                        <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
-                            <li th:text="${sellerIndicator.description}"></li>
-                        </th:block>
-                    </ul>
+                    <p class="fs-5 fw-bold">메시지는 운영 팀에게만 전달돼요</p>
+                    <div class="rv-box">
+                        <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                        <ul>
+                            <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
+                                <li class="fs-5 fw-normal" th:text="${sellerIndicator.description}"></li>
+                            </th:block>
+                        </ul>
+                    </div>
                 </div>
                 <div th:if="${reviewDetailForm.reviewState.stateCode != '0'}">
                     <div th:if="${isReviewer}">
-                        <h4 th:text="|${reviewDetailForm.sellerId}님에게 따뜻한 거래후기를 보냈어요|"></h4>
-                        <h6 th:text="|${reviewDetailForm.sellerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
-                        <p th:text="${reviewDetailForm.message}"> </p>
+                        <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.sellerId}님에게 따뜻한 거래후기를 보냈어요|"></p>
+                        <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.sellerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                         <hr class="my-4">
-                        <ul>
-                            <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
-                                <li th:text="${sellerIndicator.description}"></li>
-                            </th:block>
-                        </ul>
+                        <div class="rv-box">
+                            <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                            <ul>
+                                <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
+                                    <li class="fs-5 fw-normal" th:text="${sellerIndicator.description}"></li>
+                                </th:block>
+                            </ul>
+                        </div>
                     </div>
                     <div th:unless="${isReviewer}">
-                        <h4 th:text="|${reviewDetailForm.buyerId}님이 보낸 따뜻한 후기가 도착했어요|"></h4>
-                        <h6 th:text="|${reviewDetailForm.buyerId}님과 ${reviewDetailForm.postTitle}을 거래했어요|"> </h6>
-                        <p th:text="${reviewDetailForm.message}"> </p>
+                        <p class="fs-3 fw-bold" th:text="|${reviewDetailForm.buyerId}님이 보낸 따뜻한 후기가 도착했어요|"></p>
+                        <p class="fs-6 fw-normal" th:text="|${reviewDetailForm.buyerId}님과 ''${reviewDetailForm.postTitle}''을 거래했어요|"> </p>
                         <hr class="my-4">
-                        <ul>
-                            <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
-                                <li th:text="${sellerIndicator.description}"></li>
-                            </th:block>
-                        </ul>
+                        <div class="rv-box">
+                            <p class="fs-5 fw-normal" th:text="${reviewDetailForm.message}"> </p>
+                            <ul>
+                                <th:block th:each="sellerIndicator : ${reviewDetailForm.sellerIndicatorList}">
+                                    <li class="fs-5 fw-normal" th:text="${sellerIndicator.description}"></li>
+                                </th:block>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <button th:if="${isReviewer}"
-                        class="w-100 btn btn-secondary btn-lg"
+                        class="w-100 btn btn-secondary btn-lg mt-5"
                         id="sellerDelBtn"> 삭제하기 </button>
             </div>
 
-            <button class="w-100 btn btn-secondary btn-lg"
+            <button class="w-100 btn bg-orange btn-lg mt-3"
                     onclick="history.go(-1); return false;"
                     type="button">이전으로</button>
         </div> <!-- form-continer-->
